--- a/app/views/auth/email.html
+++ b/app/views/auth/email.html
@@ -1,18 +1,21 @@
 {% extends "layouts/forms.html" %}
-{% set title %}Enter your email address{% endset %}
+{% set title %}Your email address{% endset %}
 
 
 {% block form %}
 <h1 class="govuk-heading-xl">{{ title | safe }}</h1>
 
-<p>You’ll receive a code by email to confirm your email address.</p>
 
   {{ govukInput({
     id: "[email]",
     name: "[email]",
+    label: {
+      text: "Email address",
+      classes: "govuk-label--s"
+    },
  
     hint: {
-      html: 'Use your personal email address. This is so you can keep these sign in details should you change jobs.'
+      html: "We'll use this to send you a code to confirm your email address. Do not use a work or university email that you might lose access to."
     },
     value: data['email']
   }) }}
