--- a/app/views/auth/apply-for-qts.html
+++ b/app/views/auth/apply-for-qts.html
@@ -1,11 +1,14 @@
 {% extends "layouts/main.html" %}
-{% set showAccount = true %}
+{% set signedIn = true %}
 
 {% block pageTitle %}
   Apply for a QTS
 {% endblock %}
 
 {% set serviceName %}Apply for QTS{% endset %}
+
+
+
 
 {% block content %}
 
