--- a/app/views/auth/ga-account.html
+++ b/app/views/auth/ga-account.html
@@ -1,12 +1,14 @@
 {% extends "layouts/forms.html" %}
 {% set title = "You need a Teaching Services account to continue" %}
+{% set title %}You need a {{serviceName}} to continue{% endset%}
+
 {% set hideButton = true %}
 
 
 
 {% block form %}
   <h1 class="govuk-heading-xl">{{ title }}</h1>
-  <p>A Teaching services account lets you:</p>
+  <p>A {{serviceName}} lets you:</p>
   <ul class="govuk-list govuk-list--bullet">
     <li>
       access different teaching services with one login
@@ -18,8 +20,8 @@
   </ul>
   
   {{ govukButton({
-    text: 'Create a account',
-    href: 'details'
+    text: 'Create an account',
+    href: 'email'
   }) }}
 
   <h1 class="govuk-heading-m">Already have an account?</h1>
