--- a/app/views/auth/start.html
+++ b/app/views/auth/start.html
@@ -1,7 +1,7 @@
 {% extends "layouts/main.html" %}
 
 {% block pageTitle %}
-  Start page template –Apply for a QTS – GOV.UK Prototype Kit
+Apply for qualified teacher status (QTS) in England
 {% endblock %}
 
 {% block header %}
@@ -30,19 +30,30 @@
     <div class="govuk-grid-column-two-thirds">
 
       <h1 class="govuk-heading-xl">
-        Apply for a QTS
+        Apply for qualified teacher status (QTS) in England
       </h1>
+      <p class="govuk-heading-m">Who this service is for:</p>
 
-      <p>Use this service to:</p>
+      <p>This service is for qualified teachers who trained to teach outside of England who want to apply for qualified teacher status (QTS) to teach in English schools.        </p>
+
+
+    <p> If you trained in England or Wales, or have not yet qualified, <a href="#">more about other routes to QTS</a>.        </p>
+
+       <p>Use this service to:</p>
 
       <ul class="govuk-list govuk-list--bullet">
-        <li>do something</li>
-        <li>update your name, address or other details</li>
-        <li>do something else</li>
+        <li>check if you’re eligible to apply for QTS</li>
+        <li>understand the types of evidence you’ll need to provide</li>
       </ul>
 
-      <p>Registering takes around 5 minutes.</p>
+      <p>We’ll ask some questions to check your eligibility to apply for QTS in England. This should take about 5 minutes.</p>
 
+       <p>There’s no charge to apply for QTS. You do not need to be in the UK to use this service.</p>
+        
+       <p>You need to create a {{serviceName}} to apply for qualified teacher status (QTS).</p>
+
+       <p>If you’ve already started your application using this service, you can <a href='#'>sign in to continue working on it.</a></p>
+        
       <a href="ga-account.html" role="button" draggable="false" class="govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8"  data-module="govuk-button">
         Start now
         <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" aria-hidden="true" focusable="false">
