Update to account

--- a/app/views/auth/_summary-card.html
+++ b/app/views/auth/_summary-card.html
@@ -9,6 +9,12 @@
     value: {
       html: data['email'] | title if data['email'] else 'email@example.com'
     
+    },
+    actions: {
+      items: [{
+        text: 'Change',
+        href: "name"
+      }]
     }
   },
     {
