--- a/app/views/auth/apply-for-qts.html
+++ b/app/views/auth/apply-for-qts.html
@@ -1,5 +1,5 @@
 {% extends "layouts/main.html" %}
-{% set signedIn = true %}
+{% set signedIn = 'true' %}
 
 {% block pageTitle %}
   Apply for a QTS
@@ -7,26 +7,6 @@
 
 {% set serviceName %}Apply for QTS{% endset %}
 
-{% block header %}
-  {{ govukHeader({
-    homepageUrl: "/",
-    serviceUrl: "/",
-    productName: productName,
-    serviceName: serviceName if not productName,
-    serviceUrl: serviceUrl or "/start",
-    containerClasses: "govuk-width-container",
-    navigation: [
-    {
-      href: "account-details",
-      text: "Account"
-    },
-    {
-      href: "signed-out",
-      text: "Sign out"
-    }
-  ]
-  }) }}
-{% endblock %}
 
 
 {% block content %}
