Update to my account

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -29,16 +29,16 @@
   <div class="govuk-grid-column-two-thirds-from-desktop">
     <h2 class="govuk-heading-m">Basic auth journey</h2>
     <p>journey has no checks on DQT and capture data for account creation</p>
+   <p><a href="/auth/start">Auth flow</a></p>
+        
+
+
+    <h2 class="govuk-heading-m">My account</h2>
+    <p>GAI account functionality integrated within a service</p>
+    <p><a href="/account/account-details">My Account</a></p>
 
 
 
-    <ul class="govuk-list">
-      <li>
-        <a href="/auth/start">Auth flow</a>
-      </li>
-     
-      
-    </ul>
 </div>
 </div>
 {% endblock %}
