--- a/app/views/account/date-of-birth.html
+++ b/app/views/account/date-of-birth.html
@@ -1,5 +1,6 @@
 {% extends "layouts/forms.html" %}
 {% set title %}What's your date of birth?{% endset %}
+{% set signedIn = 'true' %}
 
 
 {% block form %}
