--- a/app/views/auth/ga-account.html
+++ b/app/views/auth/ga-account.html
@@ -27,7 +27,7 @@
   <h1 class="govuk-heading-m">Already have an account?</h1>
 
   <p class="govuk-body">
-    <a href="#">Sign in</a> to using your existing account details.
+    <a href="/sign-in/email">Sign in</a> to using your existing account details.
   </p>
 
   
