--- a/app/views/index.html
+++ b/app/views/index.html
@@ -38,6 +38,9 @@
     <p><a href="/account/account-details">My Account</a></p>
 
 
+    <h2 class="govuk-heading-m">Other features </h2>
+    <p><a href="/auth/phone">Phone</a> Inpage form</p>
+    <p><a href="/auth/phone">Phone</a> Radio option view</p>
 
 </div>
 </div>
