--- a/app/views/account/phone-code.html
+++ b/app/views/account/phone-code.html
@@ -1,5 +1,5 @@
 {% extends "layouts/forms.html" %}
-{% set title %}Confirm your email address{% endset %}
+{% set title %}Check your phone{% endset %}
 
 
 {% block form %}
@@ -7,19 +7,20 @@
 
 
 
-<p>A confirmation code has been sent to <strong>{{ data.email or 'emai@example.com' }}</strong>.</p>
+<p>We’ve sent you a text message with a security code to <strong>{{ data.phone or '07827676124' }}</strong>.</p>
 
 {{ govukInput({
   label: {
-    text: "Confirmation code",
+    text: "Security code",
     classes: "govuk-label--s"
   },
+  
   classes: 'govuk-!-width-one-quarter',
   decorate: 'email-code'
 }) }}
 
 <p>
-  <a href="#">I have not received an email</a>
+  <a href="#">I have not received an text message</a>
 </p>
 
 
