Content for GAI/QTS v1
Setting out the steps for account creation in GAI lite.

--- a/app/views/auth/finish.html
+++ b/app/views/auth/finish.html
@@ -1,5 +1,5 @@
 {% extends "layouts/forms.html" %}
-{% set title %}You've created a Teaching Services account{% endset %}
+{% set title %}You've created a teaching services account{% endset %}
 
 
 {% block form %}
@@ -8,7 +8,7 @@
 <p>Next time, you can sign in just using your email <strong>({{ data.email or 'email@example.com' }})</strong>.</p>
 
 
-<p class="govuk-!-margin-bottom-6">Continue to apply for QTS </p>
+<p class="govuk-!-margin-bottom-6">Continue to Apply for QTS in England. </p>
 
 
 
