--- a/app/views/auth/ga-account.html
+++ b/app/views/auth/ga-account.html
@@ -1,6 +1,6 @@
 {% extends "layouts/forms.html" %}
-{% set title = "You need a Teaching Services account to continue" %}
-{% set title %}You need a {{serviceName}} to continue{% endset%}
+{% set title = "You need a teaching services account to continue" %}
+{% set title %}Create a teaching services account{% endset%}
 
 {% set hideButton = true %}
 
@@ -8,17 +8,24 @@
 
 {% block form %}
   <h1 class="govuk-heading-xl">{{ title }}</h1>
-  <p>A {{serviceName}} lets you:</p>
+
+
+  <p>It will only take a few minutes and you’ll need:</p>
   <ul class="govuk-list govuk-list--bullet">
     <li>
-      access different teaching services with one login
+      an email address (used for contact and account security)
     </li>
     <li>
-      update your details in one place
+      a mobile phone number (used for account security)
     </li>
-  
+    <li>
+      your name and date of birth
+    </li>
+
   </ul>
-  
+
+  <p>Once you've created an account, you can continue to Apply for QTS in England.</p>
+
   {{ govukButton({
     text: 'Create an account',
     href: 'email'
@@ -30,5 +37,19 @@
     <a href="/sign-in/email">Sign in</a> to using your existing account details.
   </p>
 
-  
+  <details class="govuk-details" data-module="govuk-details">
+  <summary class="govuk-details__summary">
+    <span class="govuk-details__summary-text">
+      About teaching services accounts
+    </span>
+  </summary>
+  <div class="govuk-details__text">
+    Teaching services accounts are new. They let teachers and teaching professionals access different DfE services with one login. You can also update your details with DfE in one place.
+  </div>
+  <div class="govuk-details__text">
+    At the moment there are only a few DfE services using teaching services accounts. In the future, you’ll be able to use your teaching services account to sign in to most DfE teaching services.
+  </div>
+</details>
+
+
 {% endblock %}
