--- a/app/views/auth/start.html
+++ b/app/views/auth/start.html
@@ -32,12 +32,12 @@ Apply for qualified teacher status (QTS) in England
       <h1 class="govuk-heading-xl">
         Apply for qualified teacher status (QTS) in England
       </h1>
-      <p class="govuk-heading-m">Who this service is for:</p>
+      <p class="govuk-heading-m">Who this service is for</p>
 
       <p>This service is for qualified teachers who trained to teach outside of England who want to apply for qualified teacher status (QTS) to teach in English schools.        </p>
 
 
-    <p> If you trained in England or Wales, or have not yet qualified, <a href="#">more about other routes to QTS</a>.        </p>
+    <p> If you trained in England or Wales, or have not yet qualified, <a href="#">learn more about other routes to QTS</a>.        </p>
 
        <p>Use this service to:</p>
 
@@ -49,11 +49,15 @@ Apply for qualified teacher status (QTS) in England
       <p>We’ll ask some questions to check your eligibility to apply for QTS in England. This should take about 5 minutes.</p>
 
        <p>There’s no charge to apply for QTS. You do not need to be in the UK to use this service.</p>
-        
-       <p>You need to create a {{serviceName}} to apply for qualified teacher status (QTS).</p>
 
        <p>If you’ve already started your application using this service, you can <a href='#'>sign in to continue working on it.</a></p>
-        
+
+       <p class="govuk-heading-m">Teaching services account</p>
+
+       <p>You’ll need to create a teaching services account to Apply for QTS in England. You can use do this at the start of this service.</p>
+
+
+
       <a href="ga-account.html" role="button" draggable="false" class="govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8"  data-module="govuk-button">
         Start now
         <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" aria-hidden="true" focusable="false">
