--- a/app/views/auth/email-code.html
+++ b/app/views/auth/email-code.html
@@ -7,7 +7,7 @@
 
 
 
-<p>A confirmation code has been sent to <strong>{{ data.email or 'emai@example.com' }}</strong>.</p>
+<p>A confirmation code has been sent to <strong>{{ data.email or 'email@example.com' }}</strong>.</p>
 
 {{ govukInput({
   label: {
