--- a/app/views/auth/ga-account.html
+++ b/app/views/auth/ga-account.html
@@ -10,7 +10,7 @@
   <h1 class="govuk-heading-xl">{{ title }}</h1>
 
 
-  <p>It will only take a few minutes and you’ll need:</p>
+  <p>It will only take a few minutes, and you’ll need:</p>
   <ul class="govuk-list govuk-list--bullet">
     <li>
       an email address (used for contact and account security)
@@ -47,7 +47,7 @@
     Teaching services accounts are new. They let teachers and teaching professionals access different DfE services with one login. You can also update your details with DfE in one place.
   </div>
   <div class="govuk-details__text">
-    At the moment there are only a few DfE services using teaching services accounts. In the future, you’ll be able to use your teaching services account to sign in to most DfE teaching services.
+    At the moment, there are only a few DfE services using teaching services accounts. In the future, you’ll be able to use your teaching services account to sign in to most DfE teaching services.
   </div>
 </details>
 
