--- a/app/views/account/signed-out.html
+++ b/app/views/account/signed-out.html
@@ -1,10 +1,10 @@
 {% extends "layouts/forms.html" %}
 {% set title %}You are now signed out{% endset %}
 {% set hideButton = "true" %}
+{% set hideBackLink = "true" %}
 
 
 {% block form %}
-<h1 class="govuk-heading-xl">{{ title | safe }}</h1>
 
 
 
