--- a/app/views/auth/date-of-birth.html
+++ b/app/views/auth/date-of-birth.html
@@ -1,70 +1,6 @@
 {% extends "layouts/forms.html" %}
 {% set title %}What's your date of birth?{% endset %}
 
-
 {% block form %}
-<h1 class="govuk-heading-xl">{{ title | safe }}</h1>
-
-
-<!-- 
-{{ govukDateInput({
-  id: "[dob]",
-  name: "[dob]",
-  
-  hint: {
-    text: "For example, 27 3 2007"
-  },
-  items: [
-    {
-      name: "[day]",
-      label: "Day",
-      value: data['day'],
-      classes: "govuk-input--width-2"
-    },
-    {
-      name: "[month]",
-      label: "Month",
-      value:  data['month'],
-      classes: "govuk-input--width-2"
-    },
-    {
-      name: "[year]",
-      label: "Year",
-      value:  data['year'],
-      classes: "govuk-input--width-4"
-    }
-  ]
-}) }} -->
-
-{{ govukDateInput({
-  id: "[dob]",
-  name: "[dob]",
-  fieldset: {
-  
-  },
-  hint: {
-    text: "For example, 27 3 1987"
-  },
-  items: [
-    {
-      name: "[dob][day]",
-      label: "Day",
-      value: data.dob.day,
-      classes: "govuk-input--width-2"
-    },
-    {
-      name: "[dob][month]",
-      label: "Month",
-      value: data.dob.month,
-      classes: "govuk-input--width-2"
-    },
-    {
-      name: "[dob][year]",
-      label: "Year",
-      value: data.dob.year,
-      classes: "govuk-input--width-4"
-    }
-  ]
-}) }}
-
+  {% include 'auth/_date-of-birth.html' %}
 {% endblock %}
