--- a/app/views/auth/email.html
+++ b/app/views/auth/email.html
@@ -1,25 +1,8 @@
 {% extends "layouts/forms.html" %}
-{% set title %}Your email address{% endset %}
+{% set title %}Your email address?{% endset %}
+{% set emailHint %}We'll use this to send you a code to confirm your email address. Do not use a work or university email that you might lose access to.{% endset %}
 
 
 {% block form %}
-<h1 class="govuk-heading-xl">{{ title | safe }}</h1>
-
-
-  {{ govukInput({
-    id: "[email]",
-    name: "[email]",
-    label: {
-      text: "Email address",
-      classes: "govuk-label--s"
-    },
- 
-    hint: {
-      html: "We'll use this to send you a code to confirm your email address. Do not use a work or university email that you might lose access to."
-    },
-    value: data['email']
-  }) }}
-
-
-
+  {% include 'auth/_email.html' %}
 {% endblock %}
