--- a/app/views/includes/back.html
+++ b/app/views/includes/back.html
@@ -1,1 +1,5 @@
-<a href="javascript:history.go(-1);" class="govuk-back-link ">Back</a>
+{% if not hideBackLink %}
+  {{ govukBackLink({
+    href: "javascript:history.go(-1)"
+  }) }}
+{% endif %}
