--- a/app/views/account/phone.html
+++ b/app/views/account/phone.html
@@ -1,26 +1,8 @@
 {% extends "layouts/forms.html" %}
-{% set title %}mobile number {% endset %}
+{% set title %}Your mobile number{% endset %}
+{% set phone = '07827235233' %}
 
 
 {% block form %}
-<h1 class="govuk-heading-xl">{{ title | safe }}</h1>
-<p>Add your mobile number to make your account more secure. We'll send a security code to this number by text message.</p>
-
-  {{ govukInput({
-    id: "[phone]",
-    name: "[phone]",
-    label: {
-      text: "Enter mobile number ",
-      classes: "govuk-label--s"
-    },
-    type: "tel",
-    autocomplete: "tel",
-    hint: {
-      html: "For international numbers include the country code"
-    },
-    value: data['phone'] | title if data['phone'] else '07827999617'
-  }) }}
-
-
-
+  {% include 'auth/_phone.html' %}
 {% endblock %}
