--- a/app/views/sign-in/finish.html
+++ b/app/views/sign-in/finish.html
@@ -1,15 +1,8 @@
 {% extends "layouts/forms.html" %}
 {% set title %}You've signed into your Teaching Services account{% endset %}
-
+{% set hideBackLink = true %}
 
 {% block form %}
-<h1 class="govuk-heading-xl">{{ title | safe }}</h1>
-
-
-
-<p class="govuk-!-margin-bottom-6">Continue to apply for QTS </p>
-
-
-
-
+  {% include 'sign-in/_finish.html' %}
 {% endblock %}
+
