--- a/app/views/sign-in/phone-code.html
+++ b/app/views/sign-in/phone-code.html
@@ -1,29 +1,8 @@
 {% extends "layouts/forms.html" %}
 {% set title %}Check your phone{% endset %}
+{% set auth = 'true' %}
 
 
 {% block form %}
-<h1 class="govuk-heading-xl">{{ title | safe }}</h1>
-
-
-
-<p>We’ve sent you a text message with a security code to <strong>{{ data.phone or '07827676124' }}</strong>.</p>
-
-{{ govukInput({
-  label: {
-    text: "Security code",
-    classes: "govuk-label--s"
-  },
-  
-  classes: 'govuk-!-width-one-quarter',
-  decorate: 'email-code'
-}) }}
-
-<p>
-  <a href="#">I have not received an text message</a>
-</p>
-
-
-
-
+  {% include 'auth/_phone-code.html' %}
 {% endblock %}
