--- a/app/views/qts/tsa/ga-account.html
+++ b/app/views/qts/tsa/ga-account.html
@@ -1,9 +1,11 @@
 {% extends "layouts/forms.html" %}
 {% set hideButton = true %}
-{% set accountPath = '/auth/email' %}
+{% set accountPath = '/qts/tsa/auth/email' %}
 {% set signIn = '/qts/tsa/sign-in/email' %}
+{% set hideBackLink = true %}
+{% set showheader = true %}
 
-{% set title %}Create a teaching services account{% endset %}
+
 
 
 {% block form %}
