--- a/app/views/account/account-details.html
+++ b/app/views/account/account-details.html
@@ -9,7 +9,7 @@
 {% block beforeContent %}
 {{ govukBackLink({
   href: "/qts/apply-for-qts",
-  html: "Back to QTS"
+  html: "Back to application"
 }) }}
 {% endblock %}
 
