--- a/app/views/auth/finish.html
+++ b/app/views/auth/finish.html
@@ -1,20 +1,7 @@
 {% extends "layouts/forms.html" %}
-<<<<<<< Updated upstream
-{% set title %}You've created a teaching services account{% endset %}
-
-
-{% block form %}
-<h1 class="govuk-heading-xl">{{ title | safe }}</h1>
-
-<p>Next time, you can sign in just using your email <strong>({{ data.email or 'email@example.com' }})</strong>.</p>
-
-
-<p class="govuk-!-margin-bottom-6">Continue to Apply for QTS in England. </p>
-
-=======
 {% set title %}You've created a Teaching Services account{% endset %}
 {% set hideBackLink = true %}
->>>>>>> Stashed changes
+{% set serviceNameOnwards = data.qts %}
 
 
 
