--- a/app/views/auth/ga-account.html
+++ b/app/views/auth/ga-account.html
@@ -1,65 +1,12 @@
 {% extends "layouts/forms.html" %}
-<<<<<<< Updated upstream
-{% set title = "You need a teaching services account to continue" %}
-{% set title %}Create a teaching services account{% endset%}
-
-=======
-{% set emailHint %}We'll use this to send you a code to confirm your email address. Do not use a work or university email that you might lose access to.{% endset %}
->>>>>>> Stashed changes
 {% set hideButton = true %}
 {% set accountPath = 'email' %}
 {% set signIn = '/sign-in/email' %}
+{% set hideBackLink = true %}
+{% set showheader = true %}
 
-{% set title %}Create a teaching services account{% endset %}
+
 
 {% block form %}
-<<<<<<< Updated upstream
-  <h1 class="govuk-heading-xl">{{ title }}</h1>
-
-
-  <p>It will only take a few minutes and you’ll need:</p>
-  <ul class="govuk-list govuk-list--bullet">
-    <li>
-      an email address (used for contact and account security)
-    </li>
-    <li>
-      a mobile phone number (used for account security)
-    </li>
-    <li>
-      your name and date of birth
-    </li>
-
-  </ul>
-
-  <p>Once you've created an account, you can continue to Apply for QTS in England.</p>
-
-  {{ govukButton({
-    text: 'Create an account',
-    href: 'email'
-  }) }}
-
-  <h1 class="govuk-heading-m">Already have an account?</h1>
-
-  <p class="govuk-body">
-    <a href="/sign-in/email">Sign in</a> to using your existing account details.
-  </p>
-
-  <details class="govuk-details" data-module="govuk-details">
-  <summary class="govuk-details__summary">
-    <span class="govuk-details__summary-text">
-      About teaching services accounts
-    </span>
-  </summary>
-  <div class="govuk-details__text">
-    Teaching services accounts are new. They let teachers and teaching professionals access different DfE services with one login. You can also update your details with DfE in one place.
-  </div>
-  <div class="govuk-details__text">
-    At the moment there are only a few DfE services using teaching services accounts. In the future, you’ll be able to use your teaching services account to sign in to most DfE teaching services.
-  </div>
-</details>
-
-
-=======
   {% include 'auth/_ga-account.html' %}
->>>>>>> Stashed changes
 {% endblock %}
