--- a/app/views/qts/tsa/sign-in/interstitial.html
+++ b/app/views/qts/tsa/sign-in/interstitial.html
@@ -1,17 +1,1 @@
-{% extends "layouts/forms.html" %}
-{% set title %}Sign in using your {{ data.tsa }}{% endset %}
-
-
-{% block form %}
-
-
-
-<p class="govuk-!-margin-bottom-6">Continue your QTS application by signing into your {{ data.tsa }}. </p>
-
-
-
-{{ govukDetails({
-    summaryText: "What is a Teacher services account?",
-    text: "Text"
-}) }}
-{% endblock %}
+{% include 'sign-in/interstitial.html' %}
