Updates to the accounts

--- a/app/views/account/account-details.html
+++ b/app/views/account/account-details.html
@@ -4,6 +4,7 @@
 {% set subHeader = data.tsa %}
 {% set signedIn = 'true' %}
 {% set hideButton  = 'true' %}
+{% set account  = 'true' %}
 
 
 {% block beforeContent %}
