--- a/app/views/account/date-of-birth.html
+++ b/app/views/account/date-of-birth.html
@@ -1,4 +1,9 @@
 {% extends "layouts/forms.html" %}
+{% set serviceName = data.qts %}
+{% set signedIn = 'true' %}
+{% set account  = 'true' %}
+
+
 {% set title %}Your date of birth{% endset %}
 {% set defaultData = {
   day: "1",
