--- a/app/views/account/email-code.html
+++ b/app/views/account/email-code.html
@@ -1,5 +1,8 @@
 {% extends "layouts/forms.html" %}
 {% set title %}Confirm your email address{% endset %}
+{% set serviceName = data.qts %}
+{% set signedIn = 'true' %}
+{% set account  = 'true' %}
 
 
 {% block form %}
