--- a/app/views/account/name.html
+++ b/app/views/account/name.html
@@ -2,6 +2,9 @@
 {% set title %}Your name{% endset %}
 {% set signedIn = 'true' %}
 {% set formAction = '' %}
+{% set serviceName = data.qts %}
+{% set account  = 'true' %}
+
 
 {% set defaultData = {
   firstName: "John",
