--- a/app/views/account/phone-code.html
+++ b/app/views/account/phone-code.html
@@ -1,6 +1,9 @@
 {% extends "layouts/forms.html" %}
 {% set title %}Check your phone{% endset %}
 {% set auth = 'true' %}
+{% set serviceName = data.qts %}
+{% set signedIn = 'true' %}
+{% set account  = 'true' %}
 
 
 {% block form %}
