--- a/app/views/account/phone.html
+++ b/app/views/account/phone.html
@@ -1,6 +1,9 @@
 {% extends "layouts/forms.html" %}
 {% set title %}Your mobile number{% endset %}
 {% set phone = '07827235233' %}
+{% set serviceName = data.qts %}
+{% set signedIn = 'true' %}
+{% set account  = 'true' %}
 
 
 {% block form %}
