--- a/app/views/auth/_ga-account.html
+++ b/app/views/auth/_ga-account.html
@@ -1,6 +1,7 @@
 {% set signinHtml %}
   href={{- signIn -}}
 {% endset -%}
+
 <h1 class="govuk-heading-xl">Create a teaching services account</h1>
 
 
@@ -30,17 +31,10 @@
   </p>
 
   
-  <details class="govuk-details" data-module="govuk-details">
-    <summary class="govuk-details__summary">
-      <span class="govuk-details__summary-text">
-        About teaching services accounts
-      </span>
-    </summary>
-    <div class="govuk-details__text">
-      Teaching services accounts are new. They let teachers and teaching professionals access different DfE services with one login. You can also update your details with DfE in one place.
-    </div>
-    <div class="govuk-details__text">
-      At the moment there are only a few DfE services using teaching services accounts. In the future, you’ll be able to use your teaching services account to sign in to most DfE teaching services.
-    </div>
-  </details>
-  
+  {{ govukDetails({
+    summaryText: "About teaching services accounts?",
+    html: "
+    <p>Teaching services accounts are new. They let teachers and teaching professionals access different DfE services with one login. You can also update your details with DfE in one place.</p>
+    <p>At the moment there are only a few DfE services using teaching services accounts. In the future, you’ll be able to use your teaching services account to sign in to most DfE teaching services.</p>
+    "
+    }) }}
