--- a/app/views/layouts/forms-qts.html
+++ b/app/views/layouts/forms-qts.html
@@ -26,7 +26,7 @@
       <span class="govuk-caption-xl">{{subHeader}}</span>
        {% endif %}
 
-      <h1 class="govuk-heading-l">{{ title | safe }}</h1>
+      <h1 class="govuk-heading-xl">{{ title | safe }}</h1>
 
 
       <form {{formActionHtml | safe }} method="post" novalidate spellcheck="false">
