--- a/app/views/layouts/main.html
+++ b/app/views/layouts/main.html
@@ -18,7 +18,8 @@ https://prototype-kit.service.gov.uk/docs/how-to-use-layouts
     navigation: [
       {
         href: "/account/account-details",
-        text: "Account"
+        text: "Account",
+        active: true if account == 'true'
       },      
       {
         href: "/account/signed-out",
