--- a/app/views/sign-in/code-type.html
+++ b/app/views/sign-in/code-type.html
@@ -1,5 +1,5 @@
 {% extends "layouts/forms.html" %}
-{% set title %}How do you want get security codes?{% endset %}
+{% set title %}How do you want get a security code?{% endset %}
 
 
 {% block form %}
