--- a/app/views/qts/eligibility/eligible.html
+++ b/app/views/qts/eligibility/eligible.html
@@ -1,4 +1,7 @@
 {% extends "layout.html" %}
+{% set serviceName %}Apply for qualified teacher status (QTS) in England{% endset %}
+
+
 
 {% block pageTitle %}
 You might be eligible to apply for QTS – {{ serviceName }} prototype
